--- a/build.gradle
+++ b/build.gradle
@@ -220,7 +220,7 @@ dependencies {
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     implementation 'androidx.autofill:autofill:1.1.0'
 
-    stableImplementation 'ch.acra:acra-http:5.11.1' // TODO: Remove upon release
+    //stableImplementation 'ch.acra:acra-http:5.11.1' // TODO: Remove upon release
     stableImplementation 'ch.acra:acra-mail:5.11.1'
     stableImplementation 'ch.acra:acra-dialog:5.11.1'
 
