Update submodule URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libs"]
 	path = libs
-	url = ../android-libs.git
+	url = https://gitlab.futo.org/keyboard/android-libs.git
 [submodule "voiceinput-shared/src/main/ml"]
 	path = voiceinput-shared/src/main/ml
-	url = ../voice-input-models.git
+	url = https://gitlab.futo.org/keyboard/voice-input-models.git
