--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -23,7 +23,7 @@ body:
     id: what-happened
     attributes:
       label: What happened?
-      description: What did you expect to happen?
+      description: What did you expect to happen? You may want to include a video recording of the issue.
       placeholder: Tell us what you see!
     validations:
       required: true
