--- a/java/assets/layouts/Special/number.yaml
+++ b/java/assets/layouts/Special/number.yaml
@@ -20,10 +20,10 @@ attributes:
   labelFlags: { followKeyLabelRatio: false }
 rows:
   - numbers:
-      - {type: base, spec: "x", moreKeys: ["a", "b", "c", "d"], hint: "abcd"}
-      - {type: base, spec: "y", moreKeys: ["i", "j", "k", "l"], hint: "ijkl"}
-      - {type: base, spec: "z", moreKeys: ["α", "β", "γ", "θ"], hint: "αβγθ"}
-      - {type: base, spec: "w", moreKeys: ["u", "v", "θ", "ϕ"], hint: "uv"}
+      - {type: base, spec: "x", moreKeys: ["!fixedColumnOrder!4", "a", "b", "c", "d"], hint: "abcd"}
+      - {type: base, spec: "y", moreKeys: ["!fixedColumnOrder!4", "i", "j", "k", "l"], hint: "ijkl"}
+      - {type: base, spec: "z", moreKeys: ["!fixedColumnOrder!4", "α", "β", "γ", "θ"], hint: "αβγθ"}
+      - {type: base, spec: "w", moreKeys: ["!fixedColumnOrder!4", "u", "v", "θ", "ϕ"], hint: "uv"}
     attributes:
       width: Grow
       style: NoBackground
