--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -14,8 +14,7 @@
      limitations under the License.
 -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.futo.inputmethod.latin.tests">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 
@@ -28,7 +27,7 @@
     </application>
 
     <instrumentation android:name="androidx.test.runner.AndroidJUnitRunner"
-        android:targetPackage="org.futo.inputmethod.latin"
+        android:targetPackage="org.futo.inputmethod.latin.tests"
         android:label="LatinIME tests">
     </instrumentation>
 </manifest>
