--- a/java/assets/layouts/Default/azerty.yaml
+++ b/java/assets/layouts/Default/azerty.yaml
@@ -2,4 +2,11 @@ name: AZERTY
 rows:
   - letters: a z e r t y u i o p
   - letters: q s d f g h j k l m
-  - letters: w x c v b n '
+  - letters:
+    - w
+    - x
+    - c
+    - v
+    - b
+    - n
+    - {type: case, normal: "'", shifted: "?"}
