--- a/java/assets/layouts/Default/colemak.yaml
+++ b/java/assets/layouts/Default/colemak.yaml
@@ -1,5 +1,15 @@
 name: Colemak
 rows:
-  - letters: q w f p g j l u y ;
+  - letters:
+    - q
+    - w
+    - f
+    - p
+    - g
+    - j
+    - l
+    - u
+    - y
+    - {type: case, normal: ";", shifted: ":"}
   - letters: a r s t d h n e i o
   - letters: z x c v b k m
