--- a/java/assets/layouts/Serbian/serbian_qwertz.yaml
+++ b/java/assets/layouts/Serbian/serbian_qwertz.yaml
@@ -1,5 +1,5 @@
 name: Serbian QWERTZ
-languages: sr-ZZ
+languages: sr-Latn
 rows:
   - letters: q w e r t z u i o p š
   - letters: a s d f g h j k l č ć
