--- a/java/assets/layouts/mapping.yaml
+++ b/java/assets/layouts/mapping.yaml
@@ -5,6 +5,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -17,6 +19,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -39,6 +43,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -50,6 +56,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -60,6 +68,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
   de:
@@ -70,6 +80,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -80,6 +92,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -90,6 +104,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -99,6 +115,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -108,6 +126,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -117,6 +137,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -127,6 +149,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -137,6 +161,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -147,6 +173,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -157,6 +185,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -167,6 +197,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
   eu_ES:
@@ -176,6 +208,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -188,6 +222,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
   fr:
@@ -197,6 +233,8 @@ languages:
     - qwertz
     - dvorak
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -207,6 +245,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -217,6 +257,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -227,6 +269,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -239,6 +283,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -248,6 +294,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -257,6 +305,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -268,6 +318,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -277,6 +329,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -286,6 +340,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -296,6 +352,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -325,6 +383,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -334,6 +394,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -351,6 +413,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -365,6 +429,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -374,6 +440,8 @@ languages:
     - qwertz
     - dvorak
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -383,6 +451,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -392,6 +462,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -401,6 +473,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -410,6 +484,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -426,6 +502,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -435,6 +513,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -450,6 +530,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -470,6 +552,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -480,6 +564,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -496,6 +582,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -505,6 +593,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -514,6 +604,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
