--- a/build.gradle
+++ b/build.gradle
@@ -227,6 +227,7 @@ dependencies {
 
     implementation 'androidx.datastore:datastore-preferences:1.1.1'
     implementation 'androidx.autofill:autofill:1.1.0'
+    implementation 'androidx.window:window:1.3.0'
 
     stableImplementation 'ch.acra:acra-mail:5.11.1'
     stableImplementation 'ch.acra:acra-dialog:5.11.1'
