--- a/java/assets/layouts/mapping.yaml
+++ b/java/assets/layouts/mapping.yaml
@@ -5,6 +5,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -17,6 +19,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -39,6 +43,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -50,6 +56,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -60,6 +68,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
   de:
@@ -70,6 +80,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -80,6 +92,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -90,6 +104,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -99,6 +115,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -108,6 +126,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -117,6 +137,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -127,6 +149,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -137,6 +161,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -147,6 +173,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -157,6 +185,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -167,6 +197,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
   eu_ES:
@@ -176,6 +208,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -188,6 +222,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
   fr:
@@ -197,6 +233,8 @@ languages:
     - qwertz
     - dvorak
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -207,6 +245,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -217,6 +257,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -227,6 +269,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -239,6 +283,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -248,6 +294,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -257,6 +305,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -268,6 +318,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -278,6 +330,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -287,6 +341,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -297,6 +353,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -327,6 +385,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -336,6 +396,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -353,6 +415,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -367,6 +431,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -376,6 +442,8 @@ languages:
     - qwertz
     - dvorak
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -385,6 +453,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -394,6 +464,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -403,6 +475,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -412,6 +486,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -428,6 +504,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -437,6 +515,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -452,6 +532,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -472,6 +554,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -482,6 +566,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -498,6 +584,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -507,6 +595,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
@@ -516,6 +606,8 @@ languages:
     - dvorak
     - azerty
     - colemak
+    - colemak_dh
+    - colemak_dh_ansi
     - bepo
     - pcqwerty
     - nordic
