--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,33 @@ variables:
 stages:          # List of stages for jobs, and their order of execution
   - build
 
-build:
+buildUnstable:
+  tags:
+    - docker
+  stage: build
+  before_script:
+    - git fetch origin master:master
+    - export VERSION_NAME=`git describe --tags --dirty`
+    - export VERSION_CODE=`git rev-list --first-parent --count master`
+    - echo $VERSION_CODE $VERSION_NAME
+    - ./setUpPropertiesCI.sh
+  script:
+    - gradle assembleUnstableRelease -s
+    - mv build/outputs/apk/unstable/release/latinime-unstable-release.apk ./keyboard-unstable-$VERSION_NAME.apk
+    - touch VERSION_CODE_$VERSION_CODE.txt
+    - touch VERSION_NAME_$VERSION_NAME.txt
+    - echo "Keyboard (Unstable) $VERSION_NAME - https://gitlab.futo.org/alex/latinime/-/jobs/$CI_JOB_ID/artifacts/raw/keyboard-unstable-$VERSION_NAME.apk"
+    - echo $VERSION_CODE $VERSION_NAME
+    - ./uploadNightly.sh ./keyboard-unstable-$VERSION_NAME.apk $VERSION_CODE $VERSION_NAME
+  artifacts:
+    name: "keyboard-unstable-$VERSION_NAME"
+    paths:
+      - ./*.apk
+      - ./*.aab
+      - ./*.txt
+  when: manual
+
+buildStable:
   tags:
     - docker
   stage: build
@@ -34,9 +60,8 @@ build:
     - touch VERSION_NAME_$VERSION_NAME.txt
     - echo "Keyboard $VERSION_NAME - https://gitlab.futo.org/alex/latinime/-/jobs/$CI_JOB_ID/artifacts/raw/keyboard-$VERSION_NAME.apk"
     - echo $VERSION_CODE $VERSION_NAME
-    - ./uploadNightly.sh
   artifacts:
-    name: "keyboard-$VERSION_NAME"
+    name: "keyboard-stable-$VERSION_NAME"
     paths:
       - ./*.apk
       - ./*.aab
