Move layouts to separate repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "voiceinput-shared/src/main/ml"]
 	path = voiceinput-shared/src/main/ml
 	url = https://gitlab.futo.org/keyboard/voice-input-models.git
+[submodule "java/assets/layouts"]
+	path = java/assets/layouts
+	url = https://github.com/futo-org/futo-keyboard-layouts.git
