--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ def getVersionName = { ->
     try {
         def stdout = new ByteArrayOutputStream()
         exec {
-            commandLine 'git', 'describe', '--tags', '--dirty'
+            commandLine 'git', 'describe', '--tags'
             standardOutput = stdout
         }
         return stdout.toString().trim()
