--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -174,6 +174,11 @@
             android:theme="@style/Theme.TextEditPopup">
         </activity>
 
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:node="remove">
+        </provider>
     </application>
 
     <!-- To query enabled input methods for voice IME detection -->
