--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ buildUnstable:
   tags:
     - docker
   stage: build
-  dependencies: []
+  needs: []
   before_script:
     - git fetch origin master:master
     - export VERSION_NAME=`git describe --tags --dirty`
@@ -51,7 +51,7 @@ buildStable:
   tags:
     - docker
   stage: build
-  dependencies: []
+  needs: []
   before_script:
     - git fetch origin master:master
     - export VERSION_NAME=`git describe --tags`
