--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: Want to pay for FUTO Keyboard?
+  - name: Need a FUTO Keyboard license?
     url: https://pay.futo.org/api/PaymentPortal
-    about: Pay for FUTO Keyboard at pay.futo.org
+    about: purchase a FUTO Keyboard license with FutoPay
   - name: Zulip Chat
     url: https://chat.futo.org/#narrow/stream/53-Keyboard
     about: FUTO Keyboard community chat
