--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,11 @@
 blank_issues_enabled: false
 contact_links:
+  - name: Want to request a new keyboard layout?
+    url: https://github.com/futo-org/futo-keyboard-layouts/issues
+    about: Open it on a dedicated keyboard layouts repository.
   - name: Need a FUTO Keyboard license?
     url: https://pay.futo.org/api/PaymentPortal
-    about: purchase a FUTO Keyboard license with FutoPay
+    about: Purchase a FUTO Keyboard license with FutoPay
   - name: Zulip Chat
     url: https://chat.futo.org/#narrow/stream/53-Keyboard
     about: FUTO Keyboard community chat
