--- a/.github/ISSUE_TEMPLATE/3-documentation_issue.yml
+++ b/.github/ISSUE_TEMPLATE/3-documentation_issue.yml
@@ -12,7 +12,7 @@ body:
 
         The [android-keyboard](https://github.com/futo-org/android-keyboard) issue tracker is reserved for issues relating to the FUTO Keyboard Android Application. Use the `Documentation` issue type to report problems with the documentation in our code repositories, inside the application, or on [https://keyboard.futo.org](https://keyboard.futo.org)
 
-        Technical writers monitor this issue type, so report Grayjay bugs or feature requests with the `Bug report` or `Feature Request` issue types instead to get engineering attention.
+        Technical writers monitor this issue type, so report FUTO Keyboard bugs or feature requests with the `Bug report` or `Feature Request` issue types instead to get engineering attention.
 
         For general usage questions, please see the [FUTO Keyboard Zulip Channel](https://chat.futo.org/#narrow/stream/53-Keyboard) or the [FUTO Keyboard Discord](https://keyboard.futo.org/discord)
 
