--- a/build.gradle
+++ b/build.gradle
@@ -318,6 +318,12 @@ dependencies {
 
     implementation "com.charleskorn.kaml:kaml:0.61.0"
 
+    // For MOZC
+    implementation 'com.google.protobuf:protobuf-javalite:3.8.0'
+    implementation 'com.google.guava:guava:33.4.8-android'
+    implementation(name:'mozc-release', ext:'aar')
+    // End for MOZC
+
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
