--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,13 @@ tasks.register('updateLocales', Exec) {
 
 preBuild.dependsOn updateLocales
 
+tasks.register('copyMozcData', Copy) {
+    from 'libs/mozc.data'
+    into 'java/res/raw'
+}
+preBuild.dependsOn('copyMozcData')
+
+
 android {
     namespace 'org.futo.inputmethod.latin'
 
